# wit-bindgen

./: Cargo.toml  demo.wasm
crates/examples/wit-bindgen-example/: Cargo.toml  README.md  build.sh  package.json  tsconfig.json
crates/examples/wit-bindgen-example/buildtools/: fix-imports.js
crates/examples/wit-bindgen-example/interfaces/: printer.wit  stringfuncs.wit
crates/examples/wit-bindgen-example/rust/: bindings.rs
crates/examples/wit-bindgen-example/src/: bindings.rs  lib.rs
crates/examples/wit-bindgen-example/ts/: main.ts  util.ts
crates/gen-c/: Cargo.toml
crates/gen-c/src/: lib.rs
crates/gen-core/: Cargo.toml
crates/gen-core/src/: lib.rs
crates/gen-js/: Cargo.toml
crates/gen-js-near/: Cargo.toml
crates/gen-js-near/src/: lib.rs
crates/gen-js/src/: lib.rs
crates/gen-json/: Cargo.toml
crates/gen-json-schema/: Cargo.toml  test.wit
crates/gen-json-schema/src/: gen.rs  lib.rs  schema.rs
crates/gen-markdown/: Cargo.toml
crates/gen-rust/: Cargo.toml
crates/gen-rust-near/: Cargo.toml
crates/gen-rust-near/src/: lib.rs
crates/gen-rust-wasm/: Cargo.toml
crates/gen-rust-wasm-near/: Cargo.toml
crates/gen-rust-wasm-near/src/: lib.rs
crates/gen-rust-wasm/src/: lib.rs
crates/gen-spidermonkey/: Cargo.toml
crates/gen-ts-near/: Cargo.toml
crates/gen-ts-near/src/: lib.rs
crates/gen-wasmtime/: Cargo.toml
crates/gen-wasmtime-py/: Cargo.toml
crates/gen-wasmtime-py/src/: lib.rs
crates/gen-wasmtime/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: abi.rs  lib.rs
crates/parser/src/ast/: resolve.rs
crates/parser/tests/: all.rs
crates/rust-wasm-impl/: Cargo.toml
crates/test-helpers/: Cargo.toml
crates/test-modules/: Cargo.toml
crates/wasmlink/: Cargo.toml
crates/wasmlink-cli/: Cargo.toml
crates/wasmtime-impl/: Cargo.toml
crates/wit-bindgen-demo/: Cargo.toml
crates/wit-component/: Cargo.toml
