[package]
name = "aha-wit-bindgen-gen-core"
version = "0.1.0"
description = "Published mirror of wit-bindgen-gen-core"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ahalabs/wit-bindgen"

[lib]
doctest = false

[dependencies]
wit-parser = { path = '../parser', version = "0.1.0",  package = 'aha-wit-parser' }
anyhow = "1"
