[package]
name = "wit-bindgen-gen-js-near"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Willem Wyndham <willem@ahalabs.dev>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0', package = "aha-wit-bindgen-gen-core" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }


