[package]
name = "wit-bindgen-gen-json-schema"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }
# schemars = "0.8.10"
valico = { git = "https://github.com/ahalabs/valico", branch = "feat/custom_vocab" }
anyhow = "1.0.58"

[dev-dependencies]
test-helpers = { path = '../test-helpers', features = ['wit-bindgen-gen-wasmtime-py'] }

[features]
default = ["initial_version"]
initial_version = []