[package]
name = "wit-bindgen-gen-json"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
heck = "0.3"
schemars = "0.8.10"
structopt = { version = "0.3", default-features = false, optional = true }
wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0', package = 'aha-wit-bindgen-gen-core' }
