[package]
name = "wit-bindgen-gen-rust-near"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-gen-core = {path = '../gen-core', version = '0.0.0', package = "aha-wit-bindgen-gen-core"}
heck = "0.3"
