[package]
name = "wit-bindgen-gen-rust-wasm-near"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-gen-core = {path = '../gen-core', version = '0.0.0', package = "aha-wit-bindgen-gen-core"}
wit-bindgen-gen-rust = { path = '../gen-rust-near', package = 'wit-bindgen-gen-rust-near', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

# [dev-dependencies]
# wit-bindgen-rust = { path = '../rust-wasm' }


# [features]
# witx-compat = ['wit-bindgen-gen-core/witx-compat']
